--- a/src/app/home/connectors/connectors.component.html
+++ b/src/app/home/connectors/connectors.component.html
@@ -73,14 +73,14 @@
                 [routerLink]="['/app/',app,'con',connector._id]">View</span>
               <span id="con-more" class="dsi dsi-more-vertical hover mr-3 ignore-outside"
                 (click)="showDropDown($event,i)"></span>
-              <div *ngIf="showOptionsDropdown[i]" class="more-options bg-white rounded list-group position-fixed"
+              <div *ngIf="showOptionsDropdown[i]" class="more-options bg-white rounded list-group position-fixed border"
                 (mouseleave)="showOptionsDropdown[i]=false" [ngStyle]="dropDownStyle" odpClickOutside
                 (outside)="showOptionsDropdown[i]=false">
-                <div id="con-edit" class="list-group-item list-group-item-action py-2"
+                <div id="con-edit" class="list-group-item list-group-item-action py-2 border-0"
                   *ngIf="canEditConnector(connector._id)" (click)="editConnector(i)">
                   Edit
                 </div>
-                <div id="con-delete" class="list-group-item list-group-item-action py-2"
+                <div id="con-delete" class="list-group-item list-group-item-action py-2 border-0 text-danger"
                   *ngIf="canEditConnector(connector._id)" (click)="deleteConnector(i);">
                   Delete
                 </div>
