--- a/src/app/home/data-format-listing/data-format-listing.component.html
+++ b/src/app/home/data-format-listing/data-format-listing.component.html
@@ -65,18 +65,18 @@
                 [routerLink]="['/app/',app,'dfm',dataFormat._id]">View</span>
               <span id="lib-more" class="dsi dsi-more-vertical hover mr-3 ignore-outside"
                 (click)="showDropDown($event,i)"></span>
-              <div *ngIf="showOptionsDropdown[i]" class="more-options bg-white rounded list-group position-fixed"
+              <div *ngIf="showOptionsDropdown[i]" class="more-options bg-white rounded list-group position-fixed border"
                 (mouseleave)="showOptionsDropdown[i]=false" [ngStyle]="dropDownStyle" odpClickOutside
                 (outside)="showOptionsDropdown[i]=false">
-                <div id="lib-edit" class="list-group-item list-group-item-action py-2"
+                <div id="lib-edit" class="list-group-item list-group-item-action py-2 border-0"
                   *ngIf="canEditDataFormat(dataFormat._id)" (click)="editDataFormat(i)">
                   Edit
                 </div>
-                <div id="lib-clone" class="list-group-item list-group-item-action py-2"
+                <div id="lib-clone" class="list-group-item list-group-item-action py-2 border-0"
                   *ngIf="canEditDataFormat(dataFormat._id) && hasManagePermission('DF')" (click)="cloneDataFormat(i)">
                   Clone
                 </div>
-                <div id="lib-delete" class="list-group-item list-group-item-action py-2"
+                <div id="lib-delete" class="list-group-item list-group-item-action py-2 border-0 text-danger"
                   *ngIf="canEditDataFormat(dataFormat._id)" (click)="deleteDataFormat(i);">
                   Delete
                 </div>
