--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -53,8 +53,7 @@
             <div *ngIf="flowData?.inputNode" odp-flow-node [currNode]="flowData.inputNode" [(nodeList)]="nodeList"
                 (nodeListChange)="changesDone = true">
             </div>
-            <div [ngClass]="{'show':showNodeProperties}"
-                class="node-properties border-left position-fixed bg-white p-4">
+            <div [ngClass]="{'show':showNodeProperties}" class="node-properties border-left position-fixed bg-white">
                 <odp-node-properties *ngIf="showNodeProperties" [nodeList]="nodeList" [currNode]="selectedNode.currNode"
                     [prevNode]="selectedNode.prevNode" (close)="showNodeProperties=false"
                     (changesDone)="changesDone = true">
@@ -66,6 +65,20 @@
 
 
 <odp-delete-modal [open]="openDeleteModal" (close)="closeDeleteNodeModal($event)"></odp-delete-modal>
+
+<!-- <ng-template #deleteModalTemplate>
+    <div class="modal-body p-4">
+        <div class="d-flex align-items-center justify-content-between w-100">
+            <span class="font-20 fw-600">{{deleteModal.title}}</span>
+            <span class="fa fa-times text-secondary hover" (click)="deleteModalTemplateRef.close(false)"></span>
+        </div>
+        <p class="text-secondary text-center my-5">{{deleteModal.message}}</p>
+        <div class="d-flex align-items-center justify-content-end">
+            <button type="button" class="btn btn-min-width btn-danger" (click)="deleteModalTemplateRef.close(true)"
+                id="sbDeleteModalYes">Yes</button>
+        </div>
+    </div>
+</ng-template> -->
 
 <ng-template #pageChangeModalTemplate>
     <div class="modal-body p-4">
