--- a/src/app/utils/structure-field-properties/number-property/number-property.component.html
+++ b/src/app/utils/structure-field-properties/number-property/number-property.component.html
@@ -44,7 +44,7 @@
       </span>
     </div>
   </div>
-  <div class="d-flex w-100 mb-4 flex-column"
+  <div class="d-flex w-100 mb-4 flex-column mt-2"
     *ngIf="form.get('properties.currency') && form.get('properties._detailedType').value === 'currency'">
     <div class=" text-secondary">Currency</div>
     <div class="">
@@ -102,7 +102,7 @@
     </button>
   </div>
 
-  <div class="mt-4 font-16 fw-400">
+  <div class="mt-4 font-16 fw-400 mb-2">
     Validations
   </div>
   <div class="w-100 mb-4"
