--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
@@ -157,10 +157,19 @@
 <ng-template #tFields let-def="def">
     <div class="field-block d-flex flex-column p-2 mx-2 mt-2 border rounded hover"
         [ngClass]="{'text-primary':selectedTargetField==def,'border-left':selectedTargetField && selectedTargetField!=def}">
-        <div class="d-flex align-items-center" (click)="selectedTargetField=def">
-            <span class="mr-3 text-success font-12 hover underline" (click)="showFormulaBuilder=true"><i>fn()</i></span>
-            <div class="input-wrapper w-100 d-flex align-items-center position-relative">
-                <span class="font-14 fw-400">{{def?.name}}</span>
+        <div class="d-flex align-items-center justify-content-between" (click)="selectedTargetField=def">
+            <div class="d-flex align-items-center">
+                <span class="mr-3 text-success font-12 hover underline"
+                    (click)="showFormulaBuilder=true"><i>fn()</i></span>
+                <div class="input-wrapper w-100 d-flex align-items-center position-relative">
+                    <span class="font-14 fw-400">{{def?.name}}</span>
+                </div>
+            </div>
+            <div class="d-flex align-items-center">
+                <ng-container *ngFor="let item of def.source;let l=last">
+                    <span class="font-12 fw-400 text-muted">{{item.name}}</span>
+                    <span *ngIf="!l" class="font-12 fw-400 text-muted">,&nbsp;</span>
+                </ng-container>
             </div>
         </div>
         <ng-container *ngFor="let item of def.definition">
