--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -54,7 +54,8 @@
                     <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Response</span>
                 </span>
             </div>
-            <div class="node-name w-100 text-center text-truncate text-muted font-12">
+            <div class="node-name d-flex align-items-center w-100 text-center text-truncate text-muted font-12 mt-1">
+                <!-- <span class="mr-1 fw-500 font-10 bg-primary text-white rounded px-1">{{node._id}}</span> -->
                 <span class="">{{node.name}}</span>
             </div>
             <span class="delete-icon dsi dsi-trash text-danger position-absolute hover"
