--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
@@ -1,10 +1,12 @@
-<div class="form-group">
+<div class="form-group position-relative">
     <label for="directoryPath">Directory Path</label>
-    <input id="directoryPath" class="form-control" type="text" [(ngModel)]="currNode.options.directoryPath">
+    <input id="directoryPath" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.directoryPath">
+    <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"></odp-node-data-selector>
 </div>
-<div class="form-group">
+<div class="form-group position-relative">
     <label for="fileName">File Name</label>
-    <input id="fileName" class="form-control" type="text" [(ngModel)]="currNode.options.fileName">
+    <input id="fileName" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.fileName">
+    <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"></odp-node-data-selector>
 </div>
 <div class="d-flex flex-column">
     <!-- <div class="form-group d-flex align-items-center">
