--- a/src/app/home/b2b-flows/b2b-flows.component.scss
+++ b/src/app/home/b2b-flows/b2b-flows.component.scss
@@ -101,7 +101,7 @@
   background: rgba($color: #000000, $alpha: 0.6);
 }
 
-.new-flow-window {
+.new-flow-window, .yaml-window {
   height: 100vh;
   width: 360px;
   top: 0;
