--- a/src/app/apps/apps.component.scss
+++ b/src/app/apps/apps.component.scss
@@ -84,7 +84,7 @@
   //   margin-left: -170px;
   // }
   .icon-block-group {
-    width: 90%;
+    width: 112%;
     font-weight: 400;
     font-size: 12px;
     color: #181818;
@@ -261,4 +261,8 @@
 
 .dark-border {
   border-color: $gray-400  !important;
+}
+
+.padding{
+  padding-right: 26px;
 }
