--- a/src/app/home/connectors-manage/connectors-manage.component.html
+++ b/src/app/home/connectors-manage/connectors-manage.component.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <div class="w-100 position-relative px-4 py-5">
             <odp-basic-info hideLogo="true" [(name)]="connector.name" [(description)]="connector.description"
-                [hideLogo]="true" [edit]="{status:editBasicDetails}">
+                [hideLogo]="true" [edit]="{status:(connector.name === 'Default DB Connector' || connector.name === 'Default File Connector')? '':editBasicDetails}">
                 <div class="d-flex align-items-end align-self-start">
                     <button *ngIf="hasPermission('PMCONBD') && edit.status" type="button"
                         class="btn btn-white border mr-3" (click)="deleteConnector()">
@@ -20,7 +20,7 @@
                         <span>Cancel</span>
                     </button>
                     <ng-container *ngIf="hasPermissionStartsWith('PMCON')">
-                        <button *ngIf="!edit.status" class="btn btn-primary btn-min-width" (click)="edit.status=true">
+                        <button *ngIf="!edit.status" class="btn btn-primary btn-min-width" (click)="edit.status=true" [disabled]="connector.name === 'Default DB Connector' || connector.name === 'Default File Connector'">
                             <span>Edit</span>
                         </button>
                         <button *ngIf="edit.status" class="btn btn-primary btn-min-width" (click)="saveConnector()">
